--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -29,39 +29,26 @@
         android:id="@+id/editText_nbKm"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView"
         android:layout_marginLeft="23dp"
         android:layout_marginStart="23dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editText_cv"
-        android:layout_marginTop="39dp"
-        android:layout_below="@+id/editText_nbKm"
-        android:layout_alignLeft="@+id/editText_nbKm"
-        android:layout_alignStart="@+id/editText_nbKm" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Puissance fiscale du véhicule :"
         android:id="@+id/textView3"
-        android:layout_alignTop="@+id/editText_cv"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/editText_nbKm"
-        android:layout_toStartOf="@+id/editText_nbKm" />
+        android:layout_marginTop="41dp"
+        android:layout_below="@+id/editText_nbKm"
+        android:layout_toLeftOf="@+id/radioGroupPF"
+        android:layout_toStartOf="@+id/radioGroupPF" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Carburant :"
         android:id="@+id/textView4"
-        android:layout_marginTop="51dp"
-        android:layout_below="@+id/editText_cv"
+        android:layout_marginTop="104dp"
+        android:layout_below="@+id/textView3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -70,22 +57,20 @@
         android:layout_height="match_parent"
         android:id="@+id/radioGroupFuel"
         android:layout_alignTop="@+id/textView4"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignLeft="@+id/editText_cv"
-        android:layout_alignStart="@+id/editText_cv"
-        android:layout_alignBottom="@+id/buttonValider">
+        android:layout_alignLeft="@+id/editText_nbKm"
+        android:layout_alignStart="@+id/editText_nbKm">
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/radio1" />
+            android:id="@+id/radio4"
+            android:text="Radio 4" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" "
-            android:id="@+id/radio2" />
+            android:text="Radio 5"
+            android:id="@+id/radio5" />
 
     </RadioGroup>
 
@@ -97,5 +82,35 @@
         android:layout_below="@+id/textView4"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="91dp" />
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/radioGroupPF"
+        android:layout_alignTop="@+id/textView3"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignLeft="@+id/editText_nbKm"
+        android:layout_alignStart="@+id/editText_nbKm"
+        android:layout_above="@+id/radioGroupFuel">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radio1"
+            android:text="Radio 1" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Radio 2"
+            android:id="@+id/radio2" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Radio 3"
+            android:id="@+id/radio3" />
+    </RadioGroup>
 
 </RelativeLayout>
