--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,14 +10,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.quentin.gsb_frais_mobile.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nombre de kilomètres :"
         android:id="@+id/textView"
-        android:layout_alignTop="@+id/editText_nbKm"
+        android:layout_alignBaseline="@+id/editText_nbKm"
+        android:layout_alignBottom="@+id/editText_nbKm"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -39,8 +40,8 @@
         android:id="@+id/textView3"
         android:layout_marginTop="41dp"
         android:layout_below="@+id/editText_nbKm"
-        android:layout_toLeftOf="@+id/radioGroupPF"
-        android:layout_toStartOf="@+id/radioGroupPF" />
+        android:layout_toLeftOf="@+id/editText_nbKm"
+        android:layout_toStartOf="@+id/editText_nbKm" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -86,19 +87,17 @@
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/radioGroupPF"
         android:layout_alignTop="@+id/textView3"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignLeft="@+id/editText_nbKm"
         android:layout_alignStart="@+id/editText_nbKm"
-        android:layout_above="@+id/radioGroupFuel">
+        android:layout_above="@+id/radioGroupFuel"
+        android:id="@+id/radioGroupPF">
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/radio1"
-            android:text="Radio 1" />
+            android:text="Radio 1"
+            android:id="@+id/radio1" />
 
         <RadioButton
             android:layout_width="wrap_content"
